[workspace]
members = [
	"crates/*"
]
exclude = [ "global_common" ]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_qs = "0.11"

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

chrono = "0.4"

tokio = { version = "1.25" }

rand = "0.8"
num_enum = "0.5"
urlencoding = "2.1"
base64 = "0.21"
lazy_static = "1.4"