[package]
name = "librarian-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["rusqlite"]
frontend = ["frontend-component"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"

thiserror = "1.0"
chrono = "0.4"
num_enum = "0.5"
bitflags = "1.3"
log = "0.4"


# Frontend
frontend-component = { git = "https://github.com/oqurum/frontend-components", rev = "969d099", optional = true  }

# Backend
rusqlite = { version = "0.27", optional = true }