[package]
name = "librarian-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-local = { path = "../common", features = ["backend"] }
common = { path = "../../global_common", features = ["backend"] }

actix = "0.13"
actix-web = "4.0"
actix-files = "0.6"
actix-identity = "0.4"
actix-multipart = "0.4"
actix-web-actors = "4.1"

async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { version = "1.17", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde-xml-rs = "0.5"
serde_qs = "0.10"

anyhow = "1.0"
thiserror = "1.0"

base64 = "0.13"
bcrypt = "0.12"
sha1 = "0.10"
sha2 = "0.10"
strsim = "0.10"

concread = "0.3"
clap = { version = "3.2", features = ["derive"] }
chrono = "0.4"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
num_enum = "0.5"
env_logger = "0.9"
rand = "0.8"
regex = "1.5"
urlencoding = "2.1"
url = "2.2"

lettre = "0.10.0-rc.5"

rusqlite = { version = "0.27", features = [ "bundled", "trace", "blob", "serde_json" ] }