[package]
name = "librarian-backend"
version = "0.1.0"
edition = "2021"
default-run = "librarian-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-local = { path = "../common", features = ["backend"] }
common = { path = "../../global_common" }

actix = "0.13"
actix-web = "4.0"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
actix-multipart = "0.5"
actix-web-actors = "4.1"

async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde-xml-rs = "0.6"
serde_qs = { workspace = true, features = ["actix4"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

base64 = { workspace = true }
bcrypt = "0.14"
sha1 = "0.10"
sha2 = "0.10"
strsim = "0.10"
bytes = "1.2"

concread = "0.4"
clap = { version = "4.1", features = ["derive"] }
image = "0.24"
env_logger = "0.10"
regex = "1.5"
url = "2.2"
chrono = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

lettre = "0.10"

tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }