[package]
name = "common-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["common/backend", "rusqlite"]
frontend = ["common/frontend", "getrandom", "web-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"

thiserror = "1.0"
chrono = "0.4"
num_enum = "0.5"
bitflags = "1.3"
log = "0.4"
rand = "0.8"


common = { path = "../../global_common" }

# Backend
rusqlite = { version = "0.27", optional = true }

# Frontend
getrandom = { version = "0.2", features = ["js"], optional = true }
web-sys = { version = "0.3", optional = true }