[package]
name = "common-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["tokio-postgres"]
frontend = ["common/frontend", "getrandom", "web-sys"]

[dependencies]
serde = { workspace = true }
serde_urlencoded = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
num_enum = { workspace = true }
bitflags = "1.3"
rand = { workspace = true }


common = { path = "../../global_common" }

# Backend
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }

# Frontend
getrandom = { version = "0.2", features = ["js"], optional = true }
web-sys = { version = "0.3", optional = true }